--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,12 +1,21 @@
 page-home {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
-.titulo {
-    text-align: center;
-}
+    .titulo {
+        text-align: center;
+        min-height: 90px;
+    }
 
-.nombres {
-font-weight: bold;
-font-size: 20px;
-}
+    .nombres {
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    .boton{
+        margin: 20px 0px 10px 0px;
+        color: white;
+        background-color: black;
+        font-size: 20px;
+        
+    }
 }
